--- a/amr_editor_simple_tbd/amr_editor_simple.html
+++ b/amr_editor_simple_tbd/amr_editor_simple.html
@@ -3,6 +3,7 @@
   <meta charset="utf-8">
   <title>AMR Editor Simple</title>
   <script src="js/jquery.min.js"></script>
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 <p><b>AMR Editor</b></p>
@@ -10,10 +11,13 @@
 <div id="amr2"></div>
 
 <br/><br/>
-<input id="command" style="margin-bottom: 20px;"/>
+<input id="command" style="margin-bottom: 4px; width:500px"/> <a id="help">Tra cứu</a>
 <br/>
-<code style="background-color:#eee">Tuyến metro số 1 đang "tăng tốc" với việc các chuyên gia nước ngoài được cho phép vào Việt Nam để làm việc tại đây.</code>
-<div style="clear:both; margin:10px"></div>
+
+</div>
+<br/>
+<code style="background-color:#eee; padding: 10px">Tuyến metro số 1 đang "tăng tốc" với việc các chuyên gia nước ngoài được cho phép vào Việt Nam để làm việc tại đây.</code>
+<div style="clear:both; margin-top:6px; margin-bottom:20px"></div>
 <textarea rows="20" cols="60"></textarea>
 <br/>
 <button>Load</button>
