--- a/app/amr.html
+++ b/app/amr.html
@@ -2,7 +2,7 @@
 <head>
   <meta charset="utf-8">
   <title>AMR Editor Simple</title>
-  <script src="js/jquery.min.js"></script>
+  <script src="amr/js/jquery.min.js"></script>
 </head>
 <body>
 <p><b>AMR Editor</b></p>
@@ -18,6 +18,6 @@
 <br/>
 <button>Load</button>
 </div>
-<script src="js/script.js"></script>
+<script src="amr/js/script.js"></script>
 </body>
 </html>
