--- a/app/conll.html
+++ b/app/conll.html
@@ -7,10 +7,10 @@
   <meta name="viewport" content="width=device-width">
   <meta name="description" content="CoNLL-U format library for JavaScript">
 
-  <link rel="stylesheet" href="conllu/css/jquery-ui-redmond.css">
-  <link rel="stylesheet" href="conllu/css/main.css">
-  <link rel="stylesheet" href="conllu/css/style-vis.css">
-      <script type="text/javascript" src="lib/ext/head.load.min.js"></script>
+  <link rel="stylesheet" href="conll/css/jquery-ui-redmond.css">
+  <link rel="stylesheet" href="conll/css/main.css">
+  <link rel="stylesheet" href="conll/css/style-vis.css">
+      <script type="text/javascript" src="conll/lib/ext/head.load.min.js"></script>
 </head>
 
 <body>
@@ -91,28 +91,28 @@
     var root = ''; // filled in by jekyll
     head.js(
         // External libraries
-        root + 'lib/ext/jquery.min.js',
-        root + 'lib/ext/jquery.svg.min.js',
-        root + 'lib/ext/jquery.svgdom.min.js',
-        root + 'lib/ext/jquery-ui.min.js',
-        root + 'lib/ext/waypoints.min.js',
+        root + 'conll/lib/ext/jquery.min.js',
+        root + 'conll/lib/ext/jquery.svg.min.js',
+        root + 'conll/lib/ext/jquery.svgdom.min.js',
+        root + 'conll/lib/ext/jquery-ui.min.js',
+        root + 'conll/lib/ext/waypoints.min.js',
 
         // brat helper modules
-        root + 'lib/brat/configuration.js',
-        root + 'lib/brat/util.js',
-        root + 'lib/brat/annotation_log.js',
-        root + 'lib/ext/webfont.js',
+        root + 'conll/lib/brat/configuration.js',
+        root + 'conll/lib/brat/util.js',
+        root + 'conll/lib/brat/annotation_log.js',
+        root + 'conll/lib/ext/webfont.js',
         // brat modules
-        root + 'lib/brat/dispatcher.js',
-        root + 'lib/brat/url_monitor.js',
-        root + 'lib/brat/visualizer.js',
+        root + 'conll/lib/brat/dispatcher.js',
+        root + 'conll/lib/brat/url_monitor.js',
+        root + 'conll/lib/brat/visualizer.js',
 
         // annotation documentation support
         'http://spyysalo.github.io/annodoc/lib/local/annodoc.js',
-        root + 'lib/local/config.js',
+        root + 'conll/lib/local/config.js',
 
         // the conllu.js library itself
-        root + 'lib/conllu.js'
+        root + 'conll/lib/conllu.js'
     );
 
     var webFontURLs = null;
