--- a/amr_editor_simple_tbd/amr_editor_simple.html
+++ b/amr_editor_simple_tbd/amr_editor_simple.html
@@ -11,7 +11,7 @@
 <div id="amr2"></div>
 
 <br/><br/>
-<input id="command" style="margin-bottom: 4px; width:500px"/> <a id="help">Tra cứu</a>
+<input id="command" style="margin-bottom: 4px; width:500px"/> <a id="help" class="help">Tra cứu</a> <a id="guide" class="help">Hướng dẫn</a>
 <br/>
 
 </div>
