--- a/app/conll_search.html
+++ b/app/conll_search.html
@@ -32,6 +32,8 @@
 </header>
 </header>
 
+<div class="articles"></div>
+
 </div> <!-- end .entry -->
 </div> <!-- end .wrap -->
 </div> <!-- end .page-content -->
