--- a/app/index.html
+++ b/app/index.html
@@ -2,7 +2,8 @@
 <head>
 </head>
 <body>
-<a href="/amr">AMR</a>
-<a href="/conll">CONLL</a>
+<a href="/amr">AMR</a><br/>
+<a href="/conll">CONLL</a><br/>
+<a href="/conll_search.html">CONLL Search</a><br/>
 </body>
 </html>
