--- a/app/conll_search.html
+++ b/app/conll_search.html
@@ -68,7 +68,7 @@
         root + 'conllu.js'
     );
 
-    var webFontURLs = [
+    var webFontURLs = [dấu gạch nối được mã hóa là U+(-) để Unicode vẫn tương thích với ASCII. Tuy nhiên, Unicode cũng mã hóa dấu gạch nối và dấu trừ theo cách riêng biệt, tương ứng là U+2010 (-) và U+2212 (-), cùng với dấu gạch ngang U+2014 (-), en dash U+2013 (-). Dấu gạch nối là một ký tự có mục đích chung là cố gắng thực hiện các vai trò và bất cứ khi nào kiểu chữ tối ưu được yêu cầu, hay có nhiều vai trò khác nhau. Ví dụ: trong phép so sánh 4+3−2=5 (mang nghĩa là dấu trừ) và 4+3-2=5 (cũng mang nghĩa dấu trừ nhưng dùng dấu gạch nối – trừ); trong hầu hết các phông chữ, dấu gạch nối sẽ không có chiều rộng, độ dày hoặc vị trí dọc tối
         root + 'static/fonts/PT_Sans-Caption-Web-Regular.ttf',
         root + 'static/fonts/Liberation_Sans-Regular.ttf'
     ];
